--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 django = "^4.2.7"
 python-dotenv = "^1.0.0"
 psycopg2-binary = "^2.9.9"
+djangorestframework = "^3.14.0"
 
 
 [build-system]
