--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,20 @@ POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_HOST=
 POSTGRES_PORT=
+
+CELERY_BROKER_URL=
+CELERY_RESULT_BACKEND=
+CELERY_TIMEZONE=
+
+EMAIL_BACKEND=
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+EMAIL_USE_TLS=
+EMAIL_USE_SSL=
+
+
+CELERY_BROKER_URL=
+CELERY_RESULT_BACKEND=
+CELERY_TIMEZONE=
