--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ django = "^4.2.7"
 python-dotenv = "^1.0.0"
 psycopg2-binary = "^2.9.9"
 djangorestframework = "^3.14.0"
+celery = "^5.3.6"
+redis = "^5.0.1"
 
 
 [build-system]
