--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,7 +30,7 @@ services:
     image: app
     tty: true
     build: .
-    command: 'python manage.py migrate && python manage.py runserver 0.0.0.0:8000'
+    command: sh -c 'python manage.py migrate && python manage.py runserver 0.0.0.0:8000'
     volumes:
       - .:/code
     ports:
