--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ psycopg2-binary = "^2.9.9"
 djangorestframework = "^3.14.0"
 celery = "^5.3.6"
 redis = "^5.0.1"
+drf-spectacular = "^0.26.5"
 
 
 [build-system]
